[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-conformal-ts"
version = "0.1.0"
description = "Conformal prediction intervals for non-exchangeable insurance claims time series"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = [
    "conformal prediction",
    "insurance",
    "time series",
    "prediction intervals",
    "claims forecasting",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "matplotlib>=3.7",
]
plots = [
    "matplotlib>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_conformal_ts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
